--- a/index.html
+++ b/index.html
@@ -1,15 +1,41 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
   <head>
-    <!-- Written by Guy Witherow -->
-    <meta charset="utf-8">
-    <title></title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <title>Fetch Quest - A dog's game</title>
+    <link href="index.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans" rel="stylesheet">
+    <!--Font does not work offline-->
   </head>
   <body>
-    <script src="js/game.js"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <div id="container">
+      <!-- game canvas container -->
+      <div id="game">
+          <canvas id="game_canvas" width="800" height="600">
+          </canvas>
+      </div>
+
+      <div id="stats">
+        <a href="leaderboard.php">leaderboard and stats</a>
+      </div>
+
+      <!-- instructions link -->
+      <div id="instructions">
+        <a href="instructions.html">instructions</a>
+      </div>
+
+      <!-- sounds for game -->
+      <div id="sounds">
+          <audio id="DesertThemeMusic" preload="auto">
+              <source src="audio/DesertThemeMusic.mp3" type="audio/mp3">
+          </audio>
+      </div>
+
+      <!-- links for javascript -->
+      <script src="js/resources.js"></script>
+      <script src="js/input.js"></script>
+      <script src="js/sprite.js"></script>
+      <script src="js/gameUtils.js"></script>
+      <!-- game must be loaded last, otherwise it has reference errors -->
+      <script src="js/game.js"></script>
+    </div>
   </body>
 </html>
