--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link href="index.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans" rel="stylesheet">
     <!--Font does not work offline-->
+    <link rel="icon" href="dog.ico" type="image/x-icon" />
   </head>
   <body>
     <div id="container">
