--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       <script src="js/input.js"></script>
       <script src="js/sprite.js"></script>
       <script src="js/gameUtils.js"></script>
+      <script src="js/animationsHero.js"></script>
       <!-- game must be loaded last, otherwise it has reference errors -->
       <script src="js/game.js"></script>
     </div>
