--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       <script src="js/sprite.js"></script>
       <script src="js/gameUtils.js"></script>
       <script src="js/animationsHero.js"></script>
+      <!-- <script src="js/menu.js"></script> -->
       <!-- game must be loaded last, otherwise it has reference errors -->
       <script src="js/game.js"></script>
     </div>
