--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <!-- sounds for game -->
       <div id="sounds">
           <audio id="DesertThemeMusic" preload="auto">
-              <source src="audio/DesertThemeMusic.mp3" type="audio/mp3">
+              <source src="audio/desertMusic.mp3" type="audio/mp3">
           </audio>
       </div>
 
@@ -36,6 +36,7 @@
       <script src="js/sprite.js"></script>
       <script src="js/gameUtils.js"></script>
       <script src="js/animationsHero.js"></script>
+      <script src="js/webAudio.js"></script>
       <!-- <script src="js/menu.js"></script> -->
       <!-- game must be loaded last, otherwise it has reference errors -->
       <script src="js/game.js"></script>
