one of my directoryies is having a hissy fit

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
       <script src="js/input.js"></script>
       <script src="js/sprite.js"></script>
       <script src="js/gameUtils.js"></script>
+      <script src="js/animationsHero.js"></script>
+      <!-- <script src="js/menu.js"></script> -->
       <!-- game must be loaded last, otherwise it has reference errors -->
       <script src="js/game.js"></script>
     </div>
