started real work on default homepage, added local copy of bs 4.1.1

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Fetch Quest - A dog's game</title>
-    <link href="index.css" rel="stylesheet" type="text/css">
+    <link href="css/index.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans" rel="stylesheet">
     <!--Font does not work offline-->
     <link rel="icon" href="dog.ico" type="image/x-icon" />
