added more graphic updates, modified hud

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
       </div>
 
       <!-- links for javascript -->
-      <script src="js/resources.js"></script>
-      <script src="js/input.js"></script>
-      <script src="js/sprite.js"></script>
-      <script src="js/gameUtils.js"></script>
-      <script src="js/animationsHero.js"></script>
-      <script src="js/webAudio.js"></script>
-      <!-- <script src="js/menu.js"></script> -->
+      <script src="js/engine/resources.js"></script>
+      <script src="js/engine/input.js"></script>
+      <script src="js/engine/sprite.js"></script>
+      <script src="js/engine/gameUtils.js"></script>
+      <script src="js/engine/webAudio.js"></script>
+      <script src="js/functions/animationsHero.js"></script>
+      <script src="js/functions/statePlayerSelect.js"></script>
       <!-- game must be loaded last, otherwise it has reference errors -->
       <script src="js/game.js"></script>
     </div>
