made edits to other pages, added leaderboard and fixed nav

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Fetch Quest - A dog's game</title>
-    <link href="css/index.css" rel="stylesheet" type="text/css">
+    <link href="css/gameStyle.css?1" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans" rel="stylesheet">
     <!--Font does not work offline-->
     <link rel="icon" href="dog.ico" type="image/x-icon" />
@@ -38,6 +38,7 @@
       <script src="js/engine/webAudio.js"></script>
       <script src="js/functions/animationsHero.js"></script>
       <script src="js/functions/statePlayerSelect.js"></script>
+      <script src="js/functions/uiFunctions.js"></script>
       <!-- game must be loaded last, otherwise it has reference errors -->
       <script src="js/game.js"></script>
     </div>
