added gamestate options

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       <script src="js/engine/gameUtils.js"></script>
       <script src="js/engine/webAudio.js"></script>
       <script src="js/functions/animationsHero.js"></script>
+      <script src="js/functions/animationsEnemy.js"></script>
       <script src="js/functions/statePlayerSelect.js"></script>
       <script src="js/functions/uiFunctions.js"></script>
       <!-- game must be loaded last, otherwise it has reference errors -->
