--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       <script src="js/engine/gameUtils.js"></script>
       <script src="js/engine/webAudio.js"></script>
       <script src="js/functions/animationsHeroJump.js"></script>
+      <script src="js/functions/genericAnimations.js"></script>
       <script src="js/functions/animationsHeroBite.js"></script>
       <script src="js/functions/animationsEnemy.js"></script>
       <script src="js/functions/statePlayerSelect.js"></script>
