added multiple game features, fixed index page weirdness

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 
       <!-- sounds for game -->
       <div id="sounds">
-          <audio id="DesertThemeMusic" preload="auto">
+          <!-- <audio id="DesertThemeMusic" preload="auto">
               <source src="audio/desertMusic.mp3" type="audio/mp3">
-          </audio>
+          </audio> -->
       </div>
 
       <!-- links for javascript -->
