added some generic fixes, reworked jump attack

--- a/game.html
+++ b/game.html
@@ -22,7 +22,7 @@
     <div id="container">
       <!-- game canvas container -->
       <div id="game">
-          <canvas id="game_canvas" width="800" height="600">
+          <canvas id="game_canvas" width="1000" height="600">
           </canvas>
       </div>
 
@@ -56,6 +56,8 @@
       <script src="js/functions/animationsEnemy.js"></script>
       <!-- functionality -->
       <script src="js/functions/statePlayerSelect.js"></script>
+      <script src="js/functions/stateEnemySelect.js"></script>
+      <script src="js/functions/stateAttackSelect.js"></script>
       <script src="js/functions/uiFunctions.js"></script>
       <script src="js/functions/battleFunctions.js"></script>
       <!-- <script src="js/functions/fileSaveLoad.js"></script> -->
